# ROS2_offboardctrl

./: README.md  offboard_control_csv.cpp  param_SITL_664project.params
bare_quad_sim/: CMakeLists.txt  package.xml
bare_quad_sim/launch/: ctrnode.launch.py  init.launch.py
bare_quad_sim/src/: offboard_control_modified.cpp
setup/: CMakeLists.txt  package.xml
setup/env-hooks/: setup.dsv.in
